--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # User-defined
 data_reciever.csv
 data_camera.csv
-sender/network_info.h
+src/sender/network_info.h
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
